@@ -1,92 +1,54 @@
 package com.example.GestionRessourcesInfo.model;
 
-import com.fasterxml.jackson.annotation.JsonSubTypes;
-import com.fasterxml.jackson.annotation.JsonTypeInfo;
+
+import com.example.GestionRessourcesInfo.model.enums.Role;
 import jakarta.persistence.*;
-import lombok.*;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.List;
 
-@Inheritance(strategy = InheritanceType.JOINED)
-@JsonTypeInfo(use = JsonTypeInfo.Id.NAME, include = JsonTypeInfo.As.PROPERTY, property = "type")
-@JsonSubTypes({
-        @JsonSubTypes.Type(value = User.class, name = "user"),
-        @JsonSubTypes.Type(value = TechnicienIT.class, name = "technicien"),
-        @JsonSubTypes.Type(value = AdministrateurIT.class, name = "admin")
-})
-@AllArgsConstructor
+@Getter
+@Setter
 @NoArgsConstructor
-@Getter @Setter
+@AllArgsConstructor
 @Entity
-@Table(name = "Personne")
-public  abstract  class Personne implements UserDetails {
-
+@Inheritance(strategy = InheritanceType.SINGLE_TABLE)
+@DiscriminatorColumn(name = "dtype")
+public class Personne implements UserDetails {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
-
-    private String nom;
-    private String prenom;
-
-    @Column(unique = true, nullable = false)
-    private String email;
-    @Column(unique = true, nullable = false)
-    private String motDePasse;
-    private String role;
-    @Column(nullable = false)
     private String username;
+    private String email;
+    private String password;
 
+    @Enumerated(EnumType.STRING)
+    private Role role;
 
-    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(getRole()));
+        if (role == null) {
+            System.out.println("Null");
+            return List.of();
+        }
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
     public String getPassword() {
-        return motDePasse;
+        return this.password;
     }
 
     @Override
     public String getUsername() {
-        return email;
+        return this.username;
     }
 
-    @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
 
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
-    @ElementCollection(fetch = FetchType.EAGER)
-    private Set<String> roles = new HashSet<>();
-
-    public boolean hasRole(String role) {
-        return roles.contains(role);
-    }
-    public void setEmail(String email) {
-        this.email = email;
-        if (this.username == null) {
-            this.username = email;
-        }
-    }
 }
